Implemented projectile destruction upon leaving camera.

--- a/data/config/Crosshairs.ini
+++ b/data/config/Crosshairs.ini
@@ -18,6 +18,7 @@ Pivot = center
 
 [O-CrosshairsP1@O-Crosshairs]
 Graphic = G-CrosshairsP1
+ChildList = O-CrosshairsGunP1
 
 [G-CrosshairsP1@G-Crosshairs]
 Texture = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
@@ -26,6 +27,7 @@ Texture = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
 
 [O-CrosshairsP2@O-Crosshairs]
 Graphic = G-CrosshairsP2
+ChildList = O-CrosshairsGunP2
 
 [G-CrosshairsP2@G-Crosshairs]
 Texture = SpaceShooterRedux/PNG/Lasers/laserRed08.png
