--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -360,6 +360,17 @@ Object = O-TurretP1
 [SP-Super8P2@SP-Super8]
 Object = O-TurretP2
 
+															;CROSSHAIRS
+															
+[SP-Crosshairs@SP-Spawner]
+CleanOnDelete = false
+
+[SP-CrosshairsP1@SP-Crosshairs]
+Object = O-MissileP1
+
+[SP-CrosshairsP2@SP-Crosshairs]
+Object = O-MissileP2
+
 															;MISSILE SHIELD
 															
 [SP-MissileShield@SP-Spawner]
@@ -621,6 +632,17 @@ Position = (0.5, 0.0, 0.0)
 
 [O-SuperGun@O-Gun]
 Position = (0.0, 0.0, 0.0)
+
+															;CROSSHAIRS GUN
+															
+[O-CrosshairsGun@O-Gun]
+Position = (0, 0)
+
+[O-CrosshairsGunP1@O-CrosshairsGun]
+Spawner = SP-CrosshairsP1
+
+[O-CrosshairsGunP2@O-CrosshairsGun]
+Spawner = SP-CrosshairsP2
 
 															;MISSILE SHIELD GUN
 															
