Refined pilot jumping, and implemented dash canceling.

--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -84,12 +84,11 @@ Graphic = G-Pilot1
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -165,12 +164,11 @@ Graphic = G-Pilot2
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -246,12 +244,11 @@ Graphic = G-Pilot3
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -327,12 +324,11 @@ Graphic = G-Pilot4
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -408,12 +404,11 @@ Graphic = G-Pilot5
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -490,12 +485,11 @@ Graphic = G-Pilot6
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -572,12 +566,11 @@ Graphic = G-Pilot7
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
@@ -653,12 +646,11 @@ Graphic = G-Pilot8
 WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
-DashSpeed = 3500.0
+DashSpeed = 1166.6666666667
 JumpDuration = 0.45
-DashDuration = 0.1
+DashDuration = 0.3
 ParryDuration = 0.8
 MeleeDuration = 0.5
-MaxDashes = 1
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
