Refined pilot behaviors up to, but not finishing, pilot 4

--- a/data/config/FX.ini
+++ b/data/config/FX.ini
@@ -43,6 +43,36 @@ EndTime = 0.5
 StartValue = 1
 EndValue = 0
 
+															;SHRINK X
+															
+[FX-ShrinkX]
+SlotList = FXS-ShrinkX
+KeepInCache = true
+Loop = false
+
+[FXS-ShrinkX]
+Type = scale
+Curve = linear
+StartTime = 0
+EndTime = @O-BeamSpouter.SpawnTime
+StartValue = (1, 1, 1)
+EndValue = (0, 1, 1)
+
+															;EXPAND X
+															
+[FX-ExpandX]
+SlotList = FXS-ExpandX
+KeepInCache = true
+Loop = false
+
+[FXS-ExpandX]
+Type = scale
+Curve = linear
+StartTime = 0
+EndTime = @O-BeamSpouter.SpawnTime
+StartValue = (0.1, 1)
+EndValue = (1, 1)
+
 															;SCROLL LEFT
 
 [FX-ScrollLeft]
