--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -143,7 +143,8 @@ CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Retur
 	O-NoDashIcon = -1
 	O-NoParryIcon = -1
 ;PROJECTILETETHERED #
-	O-Beam = 1
+	O-BeamPlacer = 1
+	O-Beam = 0.5
 	O-Puppet = 0
 ;PROJECTILEMEDIUM #
 	O-LaserWall = 1
