--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -87,7 +87,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -98,15 +98,15 @@ WaveSizeUpward = 1
 WaveSizeDownward = 6
 WaveSizeSuper = 8
 NumWavesNeutral = 1
-NumWavesUpward = 1
+NumWavesUpward = 5
 NumWavesDownward = 1
 NumWavesSuper = 6
 MaxCooldownNeutral = 0.5
 MaxCooldownUpward = 0.5
 MaxCooldownDownward = 0.5
-MaxCooldownSuper = 1 ; 120.0
+MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
-MaxWaveDelayUpward = 0.0
+MaxWaveDelayUpward = 0.2
 MaxWaveDelayDownward = 0.0
 MaxWaveDelaySuper = 0.2
 
@@ -167,7 +167,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -184,7 +184,7 @@ NumWavesSuper = 5
 MaxCooldownNeutral = 0.5
 MaxCooldownUpward = 0.25
 MaxCooldownDownward = 0.5
-MaxCooldownSuper = 1 ; 120.0
+MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -247,14 +247,14 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
 WaveSizeNeutral = 1
-WaveSizeUpward = 3
+WaveSizeUpward = 1
 WaveSizeDownward = 1
 WaveSizeSuper = 5
 NumWavesNeutral = 1
@@ -264,7 +264,7 @@ NumWavesSuper = 3
 MaxCooldownNeutral = 1.0
 MaxCooldownUpward = 1.0
 MaxCooldownDownward = 1.0
-MaxCooldownSuper = 1 ; 120.0
+MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -327,7 +327,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -344,7 +344,7 @@ NumWavesSuper = 1
 MaxCooldownNeutral = 1.0
 MaxCooldownUpward = 2.0
 MaxCooldownDownward = 1.0
-MaxCooldownSuper = 1.0 ; 120
+MaxCooldownSuper = 120
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0000075
 MaxWaveDelayDownward = 0.0
@@ -407,7 +407,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -424,7 +424,7 @@ NumWavesSuper = 1
 MaxCooldownNeutral = 0.25
 MaxCooldownUpward = 0.5
 MaxCooldownDownward = 0.5
-MaxCooldownSuper = 1 ; 120.0
+MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -488,7 +488,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -569,7 +569,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -586,7 +586,7 @@ NumWavesSuper = 1
 MaxCooldownNeutral = 0.25
 MaxCooldownUpward = 0.5
 MaxCooldownDownward = 0.5
-MaxCooldownSuper = 1 ; 120.0
+MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -649,7 +649,7 @@ JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 JumpDuration = 0.45
 DashDuration = 0.3
-ParryDuration = 0.8
+ParryDuration = 0.1
 MeleeDuration = 0.5
 MaxLives = 3
 MaxCooldownDash = 2.0
@@ -666,7 +666,7 @@ NumWavesSuper = 1
 MaxCooldownNeutral = 0.5
 MaxCooldownUpward = 1.0
 MaxCooldownDownward = 0.5
-MaxCooldownSuper = 1 ; 120.0
+MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
