--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -121,7 +121,7 @@ Object = O-LaserHeatseekingP2
 															;UPWARD 3
 															
 [SP-Upward3@SP-Spawner]
-ActiveObject = 3
+ActiveObject = 1
 
 [SP-Upward3P1@SP-Upward3]
 Object = O-TurretP1
@@ -223,10 +223,12 @@ Object = O-BeamP2
 ActiveObject = 3
 
 [SP-Downward4P1@SP-Downward4]
-Object = O-BeamP1
+;Object = O-BeamP1
+Object = O-BeamPlacerP1
 
 [SP-Downward4P2@SP-Downward4]
-Object = O-BeamP2
+;Object = O-BeamP2
+Object = O-BeamPlacerP2
 															
 															;DOWNWARD 5
 															
@@ -359,6 +361,29 @@ Object = O-TurretP1
 
 [SP-Super8P2@SP-Super8]
 Object = O-TurretP2
+
+															;BEAM PLACER
+															
+[SP-BeamPlacer@SP-Spawner]
+CleanOnDelete = false
+
+[SP-BeamPlacerP1@SP-BeamPlacer]
+Object = O-BeamSpouterP1
+
+[SP-BeamPlacerP2@SP-BeamPlacer]
+Object = O-BeamSpouterP2
+															
+															;BEAM SPOUTER
+															
+[SP-BeamSpouter@SP-Spawner]
+ActiveObject = 1
+CleanOnDelete = false
+
+[SP-BeamSpouterP1@SP-BeamSpouter]
+Object = O-BeamP1
+
+[SP-BeamSpouterP2@SP-BeamSpouter]
+Object = O-BeamP2
 
 															;CROSSHAIRS
 															
@@ -645,6 +670,28 @@ Position = (0.5, 0.0, 0.0)
 
 [O-SuperGun@O-Gun]
 Position = (0.0, 0.0, 0.0)
+
+															;BEAM PLACER GUN
+															
+[O-BeamPlacerGun@O-Gun]
+Position = (0, 0)
+
+[O-BeamPlacerGunP1@O-BeamPlacerGun]
+Spawner = SP-BeamPlacerP1
+
+[O-BeamPlacerGunP2@O-BeamPlacerGun]
+Spawner = SP-BeamPlacerP2
+															
+															;BEAM SPOUTER GUN
+															
+[O-BeamSpouterGun@O-Gun]
+Position = (0, 0)
+
+[O-BeamSpouterGunP1@O-BeamSpouterGun]
+Spawner = SP-BeamSpouterP1
+
+[O-BeamSpouterGunP2@O-BeamSpouterGun]
+Spawner = SP-BeamSpouterP2
 
 															;CROSSHAIRS GUN
 															
