--- a/data/config/TimelineTrack.ini
+++ b/data/config/TimelineTrack.ini
@@ -9,6 +9,12 @@
 0.40 = Object.AddShader ^ SH-ColorWhite
 0.50 = Object.RemoveShader ^ SH-ColorWhite
 
+															;BEAM SPOUTER
+									
+;Ensure that the first value of this track is equal to O-BeamSpouter.SpawnTime									
+[TT-BeamSpouter]
+0.75 = Object.AddFX ^ FX-ShrinkX, Object.SetLifeTime ^ fx
+
 															;STORE SCENE
 
 [TT-StoreScene]
