--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -682,6 +682,75 @@ PartList = BP-SpacerP2
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
 
+															;BEAM PLACER
+															
+[O-BeamPlacer@O-Projectile]
+Group = projectileTethered
+Position = @Commands.CalculatePosition
+Scale = (2.0, 48.0, 1.0)
+LifeTime = fx
+FXList = FX-ShrinkX
+;User-Defined
+Pos = (0, 0)
+Depth = O-BeamPlacer
+FSpeed = 0
+
+[G-BeamPlacer@G-Projectile]
+Pivot = bottom
+
+															;BEAM PLACER P1
+															
+[O-BeamPlacerP1@O-BeamPlacer]
+Graphic = G-BeamPlacerP1
+ChildList = O-BeamPlacerGunP1
+
+[G-BeamPlacerP1@G-BeamPlacer]
+Texture = Effects/fire08.png
+															
+															;BEAM PLACER P2
+															
+[O-BeamPlacerP2@O-BeamPlacer]
+Graphic = G-BeamPlacerP2
+ChildList = O-BeamPlacerGunP2
+
+[G-BeamPlacerP2@G-BeamPlacer]
+Texture = Effects/fire08.png
+
+															;BEAM SPOUTER
+															
+[O-BeamSpouter@O-Projectile]
+Group = projectileMedium
+Position = @Commands.CalculatePosition
+Scale = (2, 0.5)
+FXList = FX-ExpandX
+TrackList = TT-BeamSpouter
+;User-Defined
+Pos = (0, 0)
+Depth = O-BeamSpouter
+FSpeed = 0
+SpawnTime = 0.75 ; The amount of time the BeamSpouter is alive before it spawns a beam.
+
+[G-BeamSpouter@G-Projectile]
+Pivot = center
+
+															;BEAM SPOUTER P1
+															
+[O-BeamSpouterP1@O-BeamSpouter]
+Graphic = G-BeamSpouterP1
+ChildList = O-BeamSpouterGunP1
+
+[G-BeamSpouterP1@G-BeamSpouter]
+Texture = Lasers/laserBlue10.png
+															
+															;BEAM SPOUTER P2
+															
+[O-BeamSpouterP2@O-BeamSpouter]
+Graphic = G-BeamSpouterP2
+ChildList = O-BeamSpouterGunP2
+
+[G-BeamSpouterP2@G-BeamSpouter]
+Texture = Lasers/laserRed10.png
+
 															;BEAM
 
 [O-Beam@O-Projectile]
