Continued refining behavior

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -150,6 +150,7 @@ CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Retur
 	O-LaserWall = 1
 	O-Spacer = 0.5
 	O-Prism = 0
+	O-Shuttlecock = -0.5
 ;PROJECTILESMALL #
 	O-Shockwave = 1
 	O-Familiar = 0.9
