--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -6,6 +6,7 @@ HighSpeed = true ; For high velocity objects, this property should be set to tru
 ;UseParentSpace = position
 ;User-Defined
 IsBouncy = false
+RotateOnCollision = false
 Tethered = false
 
 [G-Projectile]
@@ -370,6 +371,56 @@ PartList = BP-OrbP2
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
 
+															;SHUTTLECOCK
+															
+[O-Shuttlecock@O-Projectile]
+Group = projectileMedium
+Position = @Commands.CalculatePosition
+Rotation = 180
+Scale = (2, 2)
+;User-Defined
+Pos = (0, 0)
+Depth = O-Shuttlecock
+FSpeed = 1600
+IsBouncy = true
+RotateOnCollision = true
+
+[BP-Shuttlecock@BP-Projectile]
+Type = sphere
+Restitution = 1.0 ; A restitution of one to allow for "perfect" bouncing.
+															
+															;SHUTTLECOCK P1
+															
+[O-ShuttlecockP1@O-Shuttlecock]
+Graphic = G-ShuttlecockP1
+Body = B-ShuttlecockP1
+
+[G-ShuttlecockP1@G-Projectile]
+Texture = Effects/fire04.png
+
+[B-ShuttlecockP1@B-Projectile]
+PartList = BP-ShuttlecockP1
+
+[BP-ShuttlecockP1@BP-Shuttlecock]
+SelfFlags = projectileP1
+CheckMask = geometry # pilotP2
+															
+															;SHUTTLECOCK P2
+															
+[O-ShuttlecockP2@O-Shuttlecock]
+Graphic = G-ShuttlecockP2
+Body = B-ShuttlecockP2
+
+[G-ShuttlecockP2@G-Projectile]
+Texture = Effects/fire03.png
+
+[B-ShuttlecockP2@B-Projectile]
+PartList = BP-ShuttlecockP2
+
+[BP-ShuttlecockP2@BP-Shuttlecock]
+SelfFlags = projectileP2
+CheckMask = geometry # pilotP1
+
 															;MEDUSSA HEAD
 
 [O-MedussaHead@O-Projectile]
@@ -588,7 +639,7 @@ Depth = O-Prism
 FSpeed = 300
 IsBouncy = true
 RotationSpeed = 2
-WaveSize = 5
+WaveSize = 32
 
 [BP-Prism@BP-Projectile]
 Type = box
