--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -47,10 +47,10 @@ Object = O-LaserTeleportableP2
 ActiveObject = 3
 
 [SP-Neutral4P1@SP-Neutral4]
-Object = O-OrbP1
+Object = O-ShuttlecockP1
 
 [SP-Neutral4P2@SP-Neutral4]
-Object = O-OrbP2
+Object = O-ShuttlecockP2
 															
 															;NEUTRAL 5
 															
@@ -310,13 +310,13 @@ Object = O-LaserWallP2
 															;SUPER 4
 															
 [SP-Super4@SP-Spawner]
-ActiveObject = 16
+ActiveObject = 96
 
 [SP-Super4P1@SP-Super4]
-Object = O-PuppetP1
+Object = O-LaserP1
 
 [SP-Super4P2@SP-Super4]
-Object = O-PuppetP2
+Object = O-LaserP2
 															
 															;SUPER 5
 															
