Balanced Beam behavior, added GetAABB method to ScrollMod class, fixed latent bug in IsOffCamera ScrollMod method.

--- a/data/config/FX.ini
+++ b/data/config/FX.ini
@@ -73,6 +73,36 @@ EndTime = @O-BeamSpouter.SpawnTime
 StartValue = (0.1, 1)
 EndValue = (1, 1)
 
+															;EXPAND BEAM
+															
+[FX-ExpandBeam]
+SlotList = FXS-ExpandBeam
+KeepInCache = true
+Loop = false
+
+[FXS-ExpandBeam]
+Type = scale
+Curve = linear
+StartTime = 0
+EndTime = @O-Beam.ExpansionTime
+StartValue = (0.25, 1)
+EndValue = (1, 1)
+
+															;CONTRACT BEAM
+															
+[FX-ContractBeam]
+SlotList = FXS-ContractBeam
+KeepInCache = true
+Loop = false
+
+[FXS-ContractBeam]
+Type = scale
+Curve = linear
+StartTime = 0
+EndTime = @O-Beam.ContractionTime
+StartValue = (1, 1)
+EndValue = (0.1, 1)
+
 															;SCROLL LEFT
 
 [FX-ScrollLeft]
