--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -806,14 +806,18 @@ Texture = Lasers/laserRed10.png
 
 [O-Beam@O-Projectile]
 Group = projectileTethered
+LifeTime = % > @, > Get < ExpansionTime, > @, > Get < DamageDealingTime, > + < <, > @, > Get < ContractionTime, > + < <, Return <
 Position = @Commands.CalculatePosition
 Scale = (2.0, 48.0, 1.0)
-LifeTime = 0.5
+FXList = FX-ExpandBeam
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Beam
 Tethered = true
 FSpeed = 0
+ExpansionTime = 0.75
+DamageDealingTime = 1
+ContractionTime = 0.75
 
 [G-Beam@G-Projectile]
 Pivot = bottom
@@ -835,7 +839,7 @@ Body = B-BeamP1
 Texture = Effects/fire08.png
 
 [B-BeamP1@B-Beam]
-PartList = BP-BeamP1
+;PartList = BP-BeamP1
 
 [BP-BeamP1@BP-Beam]
 SelfFlags = projectileP1
@@ -851,7 +855,7 @@ Body = B-BeamP2
 Texture = Effects/fire10.png
 
 [B-BeamP2@B-Beam]
-PartList = BP-BeamP2
+;PartList = BP-BeamP2
 
 [BP-BeamP2@BP-Beam]
 SelfFlags = projectileP2
