--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -378,6 +378,7 @@ Object = O-BeamSpouterP2
 [SP-BeamSpouter@SP-Spawner]
 ActiveObject = 1
 CleanOnDelete = false
+UseScale = false
 
 [SP-BeamSpouterP1@SP-BeamSpouter]
 Object = O-BeamP1
