Increased speed of Parryables upon parrying, fixed bug causing BeamSpouters to spawn Beams at incorrect angles when placed on left or right walls instead of ceiling or floor, Ensured that all projectiles are correctly owned in their lifetimes, thus avoiding projectile persistence across scenes, and added airborne downstab move to Pilot.

--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -85,6 +85,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -121,15 +122,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot1P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot1P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship1 # BP-Melee1P1
+PartList = BP-PilotP1 # BP-Ship1 # BP-Melee1P1 # BP-Downstab1P1
 
 [BP-Melee1P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab1P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -142,17 +149,23 @@ Body = B-Pilot1P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot1P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship1 # BP-Melee1P2
+PartList = BP-PilotP2 # BP-Ship1 # BP-Melee1P2 # BP-Downstab1P2
 
 [BP-Melee1P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab1P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -165,6 +178,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -201,15 +215,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot2P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot2P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship2 # BP-Melee2P1
+PartList = BP-PilotP1 # BP-Ship2 # BP-Melee2P1 # BP-Downstab2P1
 
 [BP-Melee2P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab2P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -222,17 +242,23 @@ Body = B-Pilot2P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot2P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship2 # BP-Melee2P2
+PartList = BP-PilotP2 # BP-Ship2 # BP-Melee2P2 # BP-Downstab2P2
 
 [BP-Melee2P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab2P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -245,6 +271,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -281,15 +308,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot3P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot3P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship3 # BP-Melee3P1
+PartList = BP-PilotP1 # BP-Ship3 # BP-Melee3P1 # BP-Downstab3P1
 
 [BP-Melee3P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab3P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -302,17 +335,23 @@ Body = B-Pilot3P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot3P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship3 # BP-Melee3P2
+PartList = BP-PilotP2 # BP-Ship3 # BP-Melee3P2 # BP-Downstab3P2
 
 [BP-Melee3P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab3P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -325,6 +364,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -361,15 +401,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot4P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot4P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship4 # BP-Melee4P1
+PartList = BP-PilotP1 # BP-Ship4 # BP-Melee4P1 # BP-Downstab4P1
 
 [BP-Melee4P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab4P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -382,17 +428,23 @@ Body = B-Pilot4P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot4P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship4 # BP-Melee4P2
+PartList = BP-PilotP2 # BP-Ship4 # BP-Melee4P2 # BP-Downstab4P2
 
 [BP-Melee4P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab4P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -405,6 +457,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -442,15 +495,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot5P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot5P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship5 # BP-Melee5P1
+PartList = BP-PilotP1 # BP-Ship5 # BP-Melee5P1 # BP-Downstab5P1
 
 [BP-Melee5P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab5P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -463,17 +522,23 @@ Body = B-Pilot5P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot5P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship5 # BP-Melee5P2
+PartList = BP-PilotP2 # BP-Ship5 # BP-Melee5P2 # BP-Downstab5P2
 
 [BP-Melee5P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab5P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -486,6 +551,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -523,15 +589,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot6P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot6P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship6 # BP-Melee6P1
+PartList = BP-PilotP1 # BP-Ship6 # BP-Melee6P1 # BP-Downstab6P1
 
 [BP-Melee6P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab6P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -544,17 +616,23 @@ Body = B-Pilot6P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot6P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship6 # BP-Melee6P2
+PartList = BP-PilotP2 # BP-Ship6 # BP-Melee6P2 # BP-Downstab6P2
 
 [BP-Melee6P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab6P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -567,6 +645,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -603,15 +682,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot7P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot7P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship7 # BP-Melee7P1
+PartList = BP-PilotP1 # BP-Ship7 # BP-Melee7P1 # BP-Downstab7P1
 
 [BP-Melee7P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab7P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -624,17 +709,23 @@ Body = B-Pilot7P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot7P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship7 # BP-Melee7P2
+PartList = BP-PilotP2 # BP-Ship7 # BP-Melee7P2 # BP-Downstab7P2
 
 [BP-Melee7P2@BP-Melee]
 TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
+[BP-Downstab7P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
@@ -647,6 +738,7 @@ WalkingSpeed = 350.0
 FlyingSpeed = 525.0
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
+DownstabSpeed = 1300
 JumpDuration = 0.45
 DashDuration = 0.3
 ParryDuration = 0.1
@@ -683,15 +775,21 @@ TextureSize = (32, 32, 0)
 Body = B-Pilot8P1
 Position = @O-PilotP1
 ShaderList = @O-PilotP1
-ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP1
 PlayerType = @O-PilotP1
 
 [B-Pilot8P1@B-Pilot]
-PartList = BP-PilotP1 # BP-Ship8 # BP-Melee8P1
+PartList = BP-PilotP1 # BP-Ship8 # BP-Melee8P1 # BP-Downstab8P1
 
 [BP-Melee8P1@BP-Melee]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP2
+
+[BP-Downstab8P1@BP-Downstab]
 TopLeft = (0, -16, 0)
 BottomRight = (16, 16, 0)
 SelfFlags = space
@@ -704,13 +802,13 @@ Body = B-Pilot8P2
 Position = @O-PilotP2
 Flip = @O-PilotP2
 ShaderList = @O-PilotP2
-ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry # O-NoDashIcon # O-NoParryIcon
+ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Downstab # O-Parry # O-NoDashIcon # O-NoParryIcon
 ;User-Defined
 Pos = @O-PilotP2
 PlayerType = @O-PilotP2
 
 [B-Pilot8P2@B-Pilot]
-PartList = BP-PilotP2 # BP-Ship8 # BP-Melee8P2
+PartList = BP-PilotP2 # BP-Ship8 # BP-Melee8P2 # BP-Downstab8P2
 
 [BP-Melee8P2@BP-Melee]
 TopLeft = (-16, -16, 0)
@@ -718,9 +816,21 @@ BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
+[BP-Downstab8P2@BP-Downstab]
+TopLeft = (0, -16, 0)
+BottomRight = (16, 16, 0)
+SelfFlags = space
+CheckMask = pilotP1
+
 															;MELEE
 
 [BP-Melee]
+Type = box
+Solid = false
+
+															;DOWNSTAB
+															
+[BP-Downstab]
 Type = box
 Solid = false
 
@@ -793,7 +903,7 @@ Absolute = true
 StartValue = (0, 255, 255) ; cyan
 EndValue = (0, 0, 255) ; blue
 
-; Temporary melee and parry objects until I finalize animations
+; Temporary melee, downstab and parry objects until I finalize animations
 
 [O-Melee@ScrollObject]
 Group = effect
@@ -809,6 +919,17 @@ Depth = O-Melee
 [G-Melee]
 Texture = Damage/playerShip1_damage3.png
 Pivot = center
+
+[O-Downstab@ScrollObject]
+Group = effect
+Graphic = G-Melee
+Position = @Commands.CalculatePosition
+Scale = (0.5, 0.5, 1)
+UseParentSpace = position
+FXList = FX-Melee
+;User-Defined
+Pos = (0, 0)
+Depth = O-Melee
 
 [O-Parry@ScrollObject]
 Group = effect
