--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -3,11 +3,11 @@
 [O-Projectile]
 LifeTime = 5.0
 HighSpeed = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
-;UseParentSpace = position
 ;User-Defined
 IsBouncy = false
 RotateOnCollision = false
 Tethered = false
+ParrySpeedModifier = 1.2
 
 [G-Projectile]
 Pivot = center
