Finished implementing all of iarwains suggestions that I feel comfortable implementing, implemented variable pilot and ship speeds and scales, and updated some pilot behaviors.

--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -2,7 +2,7 @@
 
 [O-Walls]
 ChildList = O-WallFloor # O-WallCeiling # O-WallLeftWall # O-WallRightWall
-;O-ArenaBounds Class Data
+;User-Defined
 MaxElectrificationTime = 0.5
 MaxEmberTime = 10.0
 EmberCreationRate = 0.1
