--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -16,8 +16,18 @@ DownInput = @Commands.CalculateDownInput
 UpDownInput = @Commands.CalculateUpDownInput
 DashInput = @Commands.CalculateDashInput
 ParryInput = @Commands.CalculateParryInput
-MaxIFrames = 1.0 ; Ensure that this value is equal to @TT-IFramesFlash duration / 60.
-IFrameFlashInterval = 0.1
+MaxIFrames = 1.0
+IFrameFlashInterval = 0.2
+MaxCooldownSuper = 120
+WalkingSpeedSlow = 300
+WalkingSpeedMedium = 350
+WalkingSpeedFast = 400
+FlyingSpeedSlow = 475
+FlyingSpeedMedium = 525
+FlyingSpeedFast = 575
+ScaleSmall = (1, 1)
+ScaleMedium = (1.2, 1.2)
+ScaleLarge = (1.4, 1.4)
 
 [G-Pilot]
 Pivot = center
@@ -80,9 +90,10 @@ CheckMask = geometry # space # projectileP1
 
 [O-Pilot1@O-Pilot]
 Graphic = G-Pilot1
+Scale = @O-Pilot.ScaleMedium
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedFast
+FlyingSpeed = @O-Pilot.FlyingSpeedMedium
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -102,10 +113,6 @@ NumWavesNeutral = 1
 NumWavesUpward = 17
 NumWavesDownward = 1
 NumWavesSuper = 6
-MaxCooldownNeutral = 0.5
-MaxCooldownUpward = 0.5
-MaxCooldownDownward = 0.5
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0125
 MaxWaveDelayDownward = 0.0
@@ -162,9 +169,10 @@ CheckMask = pilotP1
 
 [O-Pilot2@O-Pilot]
 Graphic = G-Pilot2
+Scale = @O-Pilot.ScaleLarge
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedFast
+FlyingSpeed = @O-Pilot.FlyingSpeedFast
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -184,10 +192,6 @@ NumWavesNeutral = 1
 NumWavesUpward = 1
 NumWavesDownward = 1
 NumWavesSuper = 5
-MaxCooldownNeutral = 0.5
-MaxCooldownUpward = 0.25
-MaxCooldownDownward = 0.5
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -244,9 +248,10 @@ CheckMask = pilotP1
 
 [O-Pilot3@O-Pilot]
 Graphic = G-Pilot3
+Scale = @O-Pilot.ScaleMedium
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedMedium
+FlyingSpeed = @O-Pilot.FlyingSpeedSlow
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -266,10 +271,6 @@ NumWavesNeutral = 1
 NumWavesUpward = 1
 NumWavesDownward = 1
 NumWavesSuper = 3
-MaxCooldownNeutral = 1.0
-MaxCooldownUpward = 1.0
-MaxCooldownDownward = 1.0
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -326,9 +327,10 @@ CheckMask = pilotP1
 
 [O-Pilot4@O-Pilot]
 Graphic = G-Pilot4
+Scale = @O-Pilot.ScaleSmall
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedSlow
+FlyingSpeed = @O-Pilot.WalkingSpeedMedium
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -348,14 +350,10 @@ NumWavesNeutral = 1
 NumWavesUpward = 60
 NumWavesDownward = 1
 NumWavesSuper = 96
-MaxCooldownNeutral = 1.0
-MaxCooldownUpward = 2.0
-MaxCooldownDownward = 1.0
-MaxCooldownSuper = 120
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0000075
 MaxWaveDelayDownward = 0.0
-MaxWaveDelaySuper = 0
+MaxWaveDelaySuper = 0.0075
 
 [G-Pilot4@G-Pilot]
 Texture = soldier_full.png
@@ -408,9 +406,10 @@ CheckMask = pilotP1
 
 [O-Pilot5@O-Pilot]
 Graphic = G-Pilot5
+Scale = @O-Pilot.ScaleSmall
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedSlow
+FlyingSpeed = @O-Pilot.FlyingSpeedSlow
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -430,13 +429,9 @@ NumWavesNeutral = 1
 NumWavesUpward = 1
 NumWavesDownward = 16
 NumWavesSuper = 1
-MaxCooldownNeutral = 0.25
-MaxCooldownUpward = 0.5
-MaxCooldownDownward = 0.5
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
-MaxWaveDelayDownward = 0.0
+MaxWaveDelayDownward = 0.00075
 MaxWaveDelaySuper = 0.0
 ShipPoundSpeed = 2000.0
 
@@ -491,9 +486,10 @@ CheckMask = pilotP1
 
 [O-Pilot6@O-Pilot]
 Graphic = G-Pilot6
+Scale = @O-Pilot.ScaleMedium
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedMedium
+FlyingSpeed = @O-Pilot.FlyingSpeedSlow
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -513,10 +509,6 @@ NumWavesNeutral = 1
 NumWavesUpward = 1
 NumWavesDownward = 1
 NumWavesSuper = 1
-MaxCooldownNeutral = 0.25
-MaxCooldownUpward = 0.0
-MaxCooldownDownward = 0.0
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -574,9 +566,10 @@ CheckMask = pilotP1
 
 [O-Pilot7@O-Pilot]
 Graphic = G-Pilot7
+Scale = @O-Pilot.ScaleMedium
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedMedium
+FlyingSpeed = @O-Pilot.FlyingSpeedFast
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -589,17 +582,13 @@ MaxCooldownDash = 2.0
 MaxCooldownParry = 1.0
 MaxCooldownMelee = 1.0
 WaveSizeNeutral = 1
-WaveSizeUpward = 3
+WaveSizeUpward = 5
 WaveSizeDownward = 1
 WaveSizeSuper = 1
 NumWavesNeutral = 1
 NumWavesUpward = 1
 NumWavesDownward = 1
 NumWavesSuper = 1
-MaxCooldownNeutral = 0.25
-MaxCooldownUpward = 0.5
-MaxCooldownDownward = 0.5
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
@@ -656,9 +645,10 @@ CheckMask = pilotP1
 
 [O-Pilot8@O-Pilot]
 Graphic = G-Pilot8
+Scale = @O-Pilot.ScaleMedium
 ;User-Defined
-WalkingSpeed = 350.0
-FlyingSpeed = 525.0
+WalkingSpeed = @O-Pilot.WalkingSpeedMedium
+FlyingSpeed = @O-Pilot.FlyingSpeedSlow
 JumpingSpeed = 1500.0
 DashSpeed = 1166.6666666667
 DownstabSpeed = 1300
@@ -678,10 +668,6 @@ NumWavesNeutral = 1
 NumWavesUpward = 1
 NumWavesDownward = 1
 NumWavesSuper = 1
-MaxCooldownNeutral = 0.5
-MaxCooldownUpward = 1.0
-MaxCooldownDownward = 0.5
-MaxCooldownSuper = 120.0
 MaxWaveDelayNeutral = 0.0
 MaxWaveDelayUpward = 0.0
 MaxWaveDelayDownward = 0.0
