--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -335,10 +335,10 @@ Object = O-LaserWallP2
 ActiveObject = % > Get O-Pilot4 NumWavesSuper, > Get O-Pilot4 WaveSizeSuper, > * < <, Return <
 
 [SP-Super4P1@SP-Super4]
-Object = O-LaserP1
+Object = O-LegionnaireP1
 
 [SP-Super4P2@SP-Super4]
-Object = O-LaserP2
+Object = O-LegionnaireP2
 															
 															;SUPER 5
 															
