--- a/data/config/Shader.ini
+++ b/data/config/Shader.ini
@@ -116,7 +116,7 @@ Color = (1.0, 1.0, 1.0)
 															;FLASH
 															
 [SH-Flash]
-ParamList = texture # Color # Time # Period
+ParamList = texture # Color # Time # Interval
 UseCustomParam = true
 Time = time
 Code = "
@@ -124,10 +124,10 @@ Code = "
 void main() {
 	vec2 curPix = gl_TexCoord[0].xy;
 	vec4 textureCol = texture2D(texture, curPix);
-	float zeroOrOne = step(0.5 * Period, mod(Time, Period));
+	float zeroOrOne = step(0.5 * Interval, mod(Time, Interval));
 	gl_FragColor = vec4(mix(textureCol.rgb, Color, zeroOrOne), textureCol.a);
 }"
 
 [SH-FlashIFrames@SH-Flash]
 Color = (1, 1, 1)
-Period = 0.2
+Interval = @O-Pilot.IFrameFlashInterval
