--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -7,6 +7,9 @@ Rotation = 90.0
 ;User-Defined
 Pos = (0, 0)
 Depth = O-Ship
+ScaleSmall = (0.6, 0.6)
+ScaleMedium = (1, 1)
+ScaleLarge = (1.4, 1.4)
 
 [G-Ship]
 Pivot = center
@@ -32,6 +35,7 @@ ShaderList = SH-OutlineP2
 
 [O-Ship1@O-Ship]
 Graphic = G-Ship1
+Scale = @O-Ship.ScaleMedium
 
 [G-Ship1@G-Ship]
 Texture = playerShip1_green.png
@@ -58,6 +62,7 @@ ChildList = O-NeutralGun1P2 # O-UpwardGun1P2 # O-DownwardGun1P2 # O-SuperGun1P2
 
 [O-Ship2@O-Ship]
 Graphic = G-Ship2
+Scale = @O-Ship.ScaleMedium
 
 [G-Ship2@G-Ship]
 Texture = playerShip2_green.png
@@ -83,6 +88,7 @@ ChildList = O-NeutralGun2P2 # O-UpwardGun2P2 # O-DownwardGun2P2 # O-SuperGun2P2
 
 [O-Ship3@O-Ship]
 Graphic = G-Ship3
+Scale = @O-Ship.ScaleLarge
 
 [G-Ship3@G-Ship]
 Texture = playerShip3_green.png
@@ -108,6 +114,7 @@ ChildList = O-NeutralGun3P2 # O-UpwardGun3P2 # O-DownwardGun3P2 # O-SuperGun3P2
 
 [O-Ship4@O-Ship]
 Graphic = G-Ship4
+Scale = @O-Ship.ScaleMedium
 
 [G-Ship4@G-Ship]
 Texture = Enemies/enemyGreen1.png
@@ -134,6 +141,7 @@ ChildList = O-NeutralGun4P2 # O-UpwardGun4P2 # O-DownwardGun4P2 # O-SuperGun4P2
 
 [O-Ship5@O-Ship]
 Graphic = G-Ship5
+Scale = @O-Ship.ScaleLarge
 
 [G-Ship5@G-Ship]
 Texture = Enemies/enemyGreen2.png
@@ -160,6 +168,7 @@ ChildList = O-NeutralGun5P2 # O-UpwardGun5P2 # O-DownwardGun5P2 # O-SuperGun5P2
 
 [O-Ship6@O-Ship]
 Graphic = G-Ship6
+Scale = @O-Ship.ScaleMedium
 
 [G-Ship6@G-Ship]
 Texture = Enemies/enemyGreen3.png
@@ -186,6 +195,7 @@ ChildList = O-NeutralGun6P2 # O-UpwardGun6P2 # O-DownwardGun6P2 # O-SuperGun6P2
 
 [O-Ship7@O-Ship]
 Graphic = G-Ship7
+Scale = @O-Ship.ScaleSmall
 
 [G-Ship7@G-Ship]
 Texture = Enemies/enemyGreen4.png
@@ -212,6 +222,7 @@ ChildList = O-NeutralGun7P2 # O-UpwardGun7P2 # O-DownwardGun7P2 # O-SuperGun7P2
 
 [O-Ship8@O-Ship]
 Graphic = G-Ship8
+Scale = @O-Ship.ScaleMedium
 
 [G-Ship8@G-Ship]
 Texture = Enemies/enemyGreen5.png
