Made first strides towards incorporating sounds into game, including downloading prototype songs, and playing one of them upon SceneMenu creation as appropriate.

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -12,6 +12,7 @@
 @ScrollMod.ini@
 @Shader.ini@
 @Ship.ini@
+@Sound.ini@
 @Spawner.ini@
 @TimelineTrack.ini@
 @UI.ini@
@@ -20,7 +21,7 @@
 
 [Resource]
 Texture = ../data/texture # ../data/texture/SpaceShooterRedux/PNG # ../data/texture/SpaceShooterRedux/Backgrounds
-Sound = ../data/sound
+Sound = ../data/sound # ../data/sound/Prototype
 
 [Render]
 ShowProfiler = false
